# clawer

./: .env  .env.example  .gitignore  Makefile  README.md  demo.py  docker-compose.yml  pyproject.toml  requirements.txt
app/: __init__.py
app/adapters/: __init__.py  google_patent.py  planet.py  sealagom_navwarn.py
app/ai/: __init__.py  dashboard_metrics.py  sql_hints.py
app/anti_crawl/: __init__.py  identity_rotator.py  proxy_pool.py  request_delayer.py
app/base/: __init__.py  http.py  kafka.py  minio.py  mongo.py
app/config/: __init__.py  ai_settings.py  settings.py
app/crawler/: __init__.py  main.py
app/dedup/: __init__.py  redis_dedup.py
app/downloader/: __init__.py  http_client.py  main.py  worker.py
app/engine/: __init__.py  browser_events.py  jinja2_renderer.py  spider_engine.py  template_loader.py  workflow_engine.py
app/etl/: __init__.py  base.py  diagnose.py  diagnose_mongo.py  init_schema.py  main.py  offset_manager.py  simple_init.py  ts_dim.py  ts_dwd.py  ts_dws.py  ts_ods.py  ts_ods_navwarn.py  ts_rds.py  ts_task.py
app/models/: __init__.py  template.py  workflow.py
app/parser/: __init__.py  template_parser.py
app/quality/: __init__.py  health_check.py  validator.py  (+1 more)
docker/: crawler.Dockerfile  downloader.Dockerfile  etl.Dockerfile  syncer.Dockerfile  web.Dockerfile
docs/: 前端界面改造功能设计分析报告.docx
scripts/: batch_scrape_patents.py  load_patents.bat
static/: index.html
templates/: google_patent.yaml  google_patent_by_assignee.yaml  google_patent_by_id.yaml  planet.yaml  sealagom_navwarn.yaml
tmp/: API_GUIDE.md  README.md  nga_broadcast_warn_test.py  nga_real_api_results.json  nga_real_api_test.py  nga_test_clean.py  nga_test_output.json  simple_nga_test.py
web-panel/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
(+103 files in other folders)
