[project]
name = "patent-crawler"
version = "0.1.0"
description = "Google Patents 专利采集平台"
requires-python = ">=3.10"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
python_files = ["test_*.py"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests requiring mock server",
    "slow: Slow running tests",
]

[tool.ruff]
target-version = "py310"
line-length = 100
exclude = ["__pycache__", ".git", ".venv", "htmlcov", ".mypy_cache", ".ruff_cache"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort (import ordering)
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "UP",  # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "SIM108", # use ternary instead of if-else
]
fixable = ["ALL"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
strict_optional = false
exclude = ["__pycache__", ".venv", "htmlcov"]
check_untyped_defs = true
show_error_codes = true

[tool.coverage.run]
source = ["app"]
omit = ["app/__init__.py", "*/__pycache__/*"]

[tool.coverage.report]
skip_empty = true
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]

[tool.coverage.html]
directory = "htmlcov"